# gnssrefl

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  PRN_GPS  README.md  README_VEG.md  README_install.md  README_invsnr.md  developer_notes.md  meson.build  old_downloaders.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  software_tests
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  main.yml  publish.yml  publish_pypi.yml
docs/: GALILEOorbits_21sep17.txt  GLONASSorbits_21sep17.txt  README_dailyavg.md  README_install.md  README_invsnr.md  README_subdaily.md  README_vwc.md  conf.py  docker_cl_instructions.md  environment.yml  file_structure.md  gnssir.md  index.rst  local_notes.md  news.md  quickLook.md  quickLook_desc.md  requirements.txt  rinex2snr.md  unavco_links.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/homeworks/: homework0.doctree  homework1.doctree  homework2.doctree  homework2_soln.doctree  homework3.doctree  homework3_soln.doctree
docs/_build/doctrees/pages/: README_dailyavg.doctree  README_install.doctree  README_invsnr.doctree  README_pboh2o.doctree  gnssir.doctree  (+15 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: GPSorbits_21sep17.txt
docs/homeworks/: homework0.md  homework1.md  homework2.md  homework2_soln.md  homework3.md  homework3_soln.md
docs/pages/: README_VEG.md  README_dailyavg.md  README_install.md  README_invsnr.md  README_pboh2o.md  README_snowdepth.md  README_subdaily.md  README_vwc.md  cofundy.md  community.md  contributions_questions.md  docker_cl_instructions.md  extract_arcs.md  file_structure.md  first_drivethru.md  func_and_utils_doc.md  gnssir.md  gpstoolbox.md  jupyter_notebook_instructions.md  local_notes.md  mydata.md  new_station.md  news.md  old_news.md  old_way.md  quickLook.md  quick_recall.md  rinex2snr.md  sc_agenda_and_instructors.md  sc_agenda_instructors.md  sc_index.rst  sc_index2024.rst  sc_media.md  sc_media2024.md  sc_precourse.md  sc_precourse2024.md  sc_questions.md  set_Frame.m  shortcourse2023.md  shortcourse_2023_web.md  (+10 more)
docs/source/: gnssrefl.rst  modules.rst
docs/use_cases/: ac59.json  at01.json  gls1-dailyavg.txt  gls1_dailyRH.txt  lorg-dailyavg.txt  lthw_use.md  mchl_phase.txt  mchl_phaseRH.txt  mchl_vwc.txt  mchn-avg2013.txt  mchn.dailyavg.txt  mchn.json  mchn_use.md  nwot.json  nwot_dailyRH.txt  nwot_usecase.eps  nwot_usecase.py  p038_phaseRH.txt  p041.json  p041_use.md  p360.json  phnx.json  pmtl-rh.txt  pmtl.csv  pmtl.save  pmtl_usecase.py  saddsnow.dw.data.csv  sbas_use.md  sc02.json  smm3.json  smm3_use.md  tgho_use.md  toolbox.md  use_ac59.md  use_at01.md  use_bur2.md  use_gls1.md  use_lorg.md  use_lthw.md  use_mat2.md  (+31 more)
gnssrefl/: Data.names  Data.pos  EGM96.py  EGM96geoidDATA.mat  advanced_vegetation_correction.py  apriori.py  cddis_highrate.py  check_gnss.py  check_rinex.py  check_rinex2.py  check_rinex_file.py  computemp1mp2.py  daily_avg.py  daily_avg_cl.py  decipher_argt.py  download_ioc.py  download_noaa.py  download_orbits.py  download_psmsl.py  download_qld.py  download_rinex.py  download_simon.py  download_teqc.py  download_tides.py  download_unr.py  download_wsv.py  extract_arcs.py  felipe.py  filesizes.py  fundy.py  gnss_frequencies.py  gnssir.py  gnssir_cl.py  gnssir_cl2.py  gnssir_input.py  gnssir_old.py  gnssir_v2.py  gnssrefl.py  gnsssnr.f  gnsssnrbigger.f  (+83 more)
gnssrefl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gnssrefl/vegetation_models/: clara_high_model.txt
notebooks/: 2023-GNSS-IR-Short-Course-pre-course-activity.ipynb
notebooks/learn-the-code/: part_0.ipynb  part_1.ipynb  part_2.ipynb  part_3 .ipynb
notebooks/use-cases/Ice_Sheets/: gls1-dye2_greenland.ipynb  lorg-lorne_ross_ice_shelf.ipynb  lthw-thwaites-glacier-antarctica.ipynb
notebooks/use-cases/Lakes_and_Rivers/: mchn-michipicoten_canada.ipynb  sbas-steenbras_dam_south_africa.ipynb  tgho-lake_taupo_new_zealand.ipynb
notebooks/use-cases/Seasonal_Snow_Accumulation/: nwot-niwot_ridge_colorado.ipynb  p041-marshall_colorado.ipynb
notebooks/use-cases/Soil_Moisture/: GNSSRefGeometry-SNRSimulation.ipynb  mchl-mitchell_queensland.ipynb  p038-portales_new_mexico.ipynb
notebooks/use-cases/Tides/: at01_st_michael_alaska.ipynb  sc02-friday_harbor_washington.ipynb
static/: CRX2RNX.macos.e  gfzrnx.linux64.e  gnssSNR.linux64.e  gpsSNR.macos.e
test/: GOLDEN_COMMIT  clear_notebook_space.py  conftest.py  regenerate_golden_files.md  run_extract_arcs.py  run_processing.sh  test_extract_arcs_tagging.py  test_file_management.py  test_gps.py  test_notebooks.sh  test_phase_track_tags.py  test_regression.py  test_reqamp.py  test_rinex2snr.py  test_tracks_qc.py
tests/: example_use_case.md  first_drivethru.md  first_drivethru.md.save  gls1_use.md  lorg_use.md  lthw_use.md  mchn_use.md  pmtl_use.md  smm3.json  smm3_use.md  spby_use.md  tgho_use.md
tests/homeworks/: gls1.json  gls1_dailyRH.txt  homework0.md  homework0_old.md  homework1.md  homework2.md  homework2_kl.md  homework2_soln.md  homework3.md  homework3_soln.md  ross.json
tests/learning/: part0.md  part1.md  part2.md  part3.md
tests/use_cases/: 024.txt  10750-01-JAN-2013_slev.csv  LAKE_MATHEWS_MHW.csv  at01.json  at01_subdaily_rh.txt  gls1.json  lorg.json  lorg_allRH.txt  lorg_use.md  lthw_use.md  mchn-dailyavg.txt  niwot_pole6.txt  nwot_usecase.py  p041-dailyavg.txt  p041_use.md  p360.json  p360_dailyRH.txt  plotmchn.py  pmtl.json  pmtl_usecase.py  smm3.json  smm3_RH.txt  smm3_use.md  tgho.json  use_ab33.md  use_ambc.md  use_at01.md  use_aubg.md  use_brst.md  use_bur2.md  use_calc.md  use_gls1.md  use_hkpc.md  use_lorg.md  use_lthw.md  use_luri.md  use_mat2.md  use_mbbc.md  use_mchl.md  use_mchn.md  (+25 more)
(+173 files in other folders)
