[build-system]

requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "gnssrefl"
version = "3.5.10"
description = "A GNSS reflectometry software package "
readme = "README.md"
maintainers = [
    { name = "Kristine Larson", email = "kristinem.larson@gmail.com" },
]
requires-python = ">=3.9,<4"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
"Documentation" = "https://gnssrefl.readthedocs.io/en/latest/"
"Source" = "https://github.com/kristinemlarson/gnssrefl/"
"Issue Tracker" = "https://github.com/kristinemlarson/gnssrefl/issues/"
